--- a/styles.css
+++ b/styles.css
@@ -394,7 +394,7 @@ header nav ul li a.active {
   box-shadow: 0 4px 16px #ffffff;
 }
 
-.card__img img {
+.card__img  {
   width: 180px;
   height: 180px;
   border-radius: 50%;
@@ -594,7 +594,7 @@ header nav ul li a.active {
 .about_Me {
   position: relative;
   top: 0px; 
-  left: 1060px; 
+  left: 980px; 
   width: 700px; 
   height: 300px; 
   text-align: left;
@@ -628,7 +628,7 @@ header nav ul li a.active {
     position: relative;
     padding-top: 240px; 
     left: 6%; 
-    width: 380px; 
+    width: 350px; 
     height: 300px; 
     text-align: left;
   }
@@ -648,6 +648,7 @@ header nav ul li a.active {
   padding-top: 1350px;
   position: absolute;
   padding-left: 20%;
+  display: none;
 }
 
 .social_Icons {
@@ -659,13 +660,21 @@ header nav ul li a.active {
   color: #1c1c1c;
 }
 
+@media (max-width: 500px) {
+  .about_Icons {
+    display: flex;
+  }
+}
+
 /* --------------------- Skill Banner ----------------------*/
 
+.banner1 {
+  padding-bottom: 100px;
+}
 
 .experience-container {
   position: relative;
   width: 100vw;
-  width: 100%;
   height: 220px;
   padding-top: 8px;
   padding-bottom: 8px;
@@ -719,21 +728,9 @@ header nav ul li a.active {
   }
 }
 
-.additional-container {
-  margin-top: 16px;
-  display: flex;
-  justify-content: center;
-}
-
-.content-box {
-  margin-top: 64px;
-  margin-bottom: 240px;
-  width: 95vw;
-}
-
 @media (max-width: 500px) {
   .banner1 {
-    padding-top: 300px; /* Adjust this value as needed */
+    padding-top: 300px; 
   }
 }
 
@@ -1014,8 +1011,3 @@ header nav ul li a.active {
   }
 
   /* -------------------------------------------------------*/ 
-
-  .banner2 {
-    padding-top: 4000px;
-    position: absolute;
-  }
