--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
   text-decoration: none;
   list-style: none;
   box-sizing: border-box;
-  font-family: "MonumentExtended", sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 body {
@@ -16,10 +16,9 @@ body {
   overflow-x: hidden;
 }
 
-
 @media (max-width: 500px) {
   body {
-    margin-bottom: 80vh; 
+    margin-bottom: 80vh;
   }
 }
 
@@ -41,11 +40,8 @@ header {
 header.sticky {
   position: fixed;
   top: 0;
-  z-index: 1000;
-}
-
-header.sticky {
   padding: 0 30px;
+  z-index: 1000;
 }
 
 
@@ -53,7 +49,7 @@ header.sticky .logo,
 header.sticky ul li a {
   font-weight: 700;
   color: #000;
-  z-index: 5;
+  z-index: 1;
 }
 
 header.sticky.logo {
@@ -120,7 +116,7 @@ header nav ul li a.active {
     width: 100%;
     left: -100%;
     top: 0;
-    background-color: #FFFFFF;
+    background-color: #ffffff;
     width: 30%;
     height: 100000px;
     padding-left: 30px;
@@ -142,6 +138,12 @@ header nav ul li a.active {
     font-size: 22px;
     color: #1c1c1c;
   }
+
+  .nav_logo {
+    font-size: 35px;
+    position: absolute;
+    margin-top: -65px;
+  }
 }
 
 @media (max-width: 500px) {
@@ -155,8 +157,8 @@ header nav ul li a.active {
     width: 100%;
     left: -100%;
     top: 0;
-    background-color: #FFFFFF;
-    width: 50%;
+    background-color: #ffffff;
+    width: 200px;
     height: 100000px;
     padding-left: 30px;
     padding-top: 80px;
@@ -275,15 +277,21 @@ header nav ul li a.active {
 
 .text-overlay p {
   font-size: 30px;
-  color: #FFFFFF;
+  color: #ffffff;
   font-weight: 900;
   padding-left: 20px;
 }
 
 @keyframes blink {
-  0% {opacity: 1;}
-  50% {opacity: 0;}
-  100% {opacity: 1;}
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 .blink {
@@ -319,7 +327,7 @@ header nav ul li a.active {
 
   .text-overlay p {
     font-size: 24px;
-    color: #FFFFFF;
+    color: #ffffff;
     font-weight: 900;
     padding-left: 34px;
     padding-top: 20px;
@@ -394,7 +402,7 @@ header nav ul li a.active {
   box-shadow: 0 4px 16px #ffffff;
 }
 
-.card__img  {
+.card__img {
   width: 180px;
   height: 180px;
   border-radius: 50%;
@@ -551,7 +559,7 @@ header nav ul li a.active {
 }
 
 .about_Text {
-  font-size: 3vw; 
+  font-size: 3vw;
   font-weight: 800;
   -webkit-text-stroke-width: 2px;
   -webkit-text-stroke-color: #1c1c1c;
@@ -559,8 +567,8 @@ header nav ul li a.active {
   color: transparent;
   position: absolute;
   left: 76%;
-  transform: translateX(-50%); 
-  line-height: 1.5; 
+  transform: translateX(-50%);
+  line-height: 1.5;
   white-space: nowrap;
   overflow: hidden;
   margin-top: -20%;
@@ -585,7 +593,7 @@ header nav ul li a.active {
     transform: translateX(-50%);
     margin-top: -90%;
     padding-top: 300px;
-    padding-left: 170px; 
+    padding-left: 170px;
   }
 }
 
@@ -593,10 +601,10 @@ header nav ul li a.active {
 
 .about_Me {
   position: relative;
-  top: 0px; 
-  left: 980px; 
-  width: 700px; 
-  height: 300px; 
+  top: 0px;
+  left: 1060px;
+  width: 700px;
+  height: 300px;
   text-align: left;
 }
 
@@ -609,10 +617,10 @@ header nav ul li a.active {
 @media (max-width: 1500px) {
   .about_Me {
     position: relative;
-    top: 10px; 
-    left: 56%; 
-    width: 500px; 
-    height: 300px; 
+    top: 10px;
+    left: 56%;
+    width: 500px;
+    height: 300px;
     text-align: left;
   }
 
@@ -626,10 +634,10 @@ header nav ul li a.active {
 @media (max-width: 500px) {
   .about_Me {
     position: relative;
-    padding-top: 240px; 
-    left: 6%; 
-    width: 350px; 
-    height: 300px; 
+    padding-top: 240px;
+    left: 6%;
+    width: 350px;
+    height: 300px;
     text-align: left;
   }
 
@@ -641,7 +649,7 @@ header nav ul li a.active {
 }
 
 /* --------------------------------------------------------- */
-  
+
 /* --------------------- About Icons ----------------------*/
 
 .about_Icons {
@@ -691,7 +699,6 @@ header nav ul li a.active {
   color: transparent;
   -webkit-text-stroke-width: 2px;
   -webkit-text-stroke-color: #f6f6f6;
-  font-family: "MonumentExtended", sans-serif;
   opacity: 0.1;
   position: absolute;
   top: 20px;
@@ -701,14 +708,13 @@ header nav ul li a.active {
 }
 
 .foreground-text {
-  font-size: 120px;
+  font-size: 190px;
   font-weight: 800;
   line-height: 1.5;
   letter-spacing: 0.6rem;
   color: transparent;
   -webkit-text-stroke-width: 3px;
   -webkit-text-stroke-color: #fff;
-  font-family: "MonumentExtended", sans-serif;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -730,44 +736,35 @@ header nav ul li a.active {
 
 @media (max-width: 500px) {
   .banner1 {
-    padding-top: 300px; 
+    padding-bottom: 20px;
   }
 }
 
 /* -------------------------------------------------------- */
 
 :root {
-  --ff-poppins: "Poppins", sans-serif;
-
-  input,
-  button,
-  select,
-  textarea {
-    background: none;
-    border: none;
-    font: inherit;
-  }
-
-  button,
-  select {
-    cursor: pointer;
-  }
-
 
   .container {
     padding-inline: 10px;
   }
 
-  .h2,
-  .h3,
-  .h4 {
+  .container h2,
+  .container h3,
+  .container h4 {
     color: #1c1c1c;
-    font-family: var(--ff-poppins);
     line-height: 1.2;
+    font-size: 45px;
   }
 
-  .h3 {
-    font-size: calc(1.313rem + 1vw);
+  .container p {
+    font-size: 18px;
+  }
+
+  .toggle-btn {
+    border: none; 
+    background-color: transparent;
+    color: white; 
+    font-size: 18px;
   }
 
   .section-subtitle {
@@ -783,7 +780,7 @@ header nav ul li a.active {
     position: absolute;
     top: 100%;
     left: 0;
-    width: 80px;
+    width: 120px;
     height: 2px;
     background: #1c1c1c;
   }
@@ -800,21 +797,20 @@ header nav ul li a.active {
   }
 
   .skills .card-icon {
-    background: var(--raw-seinna);
     width: 60px;
     height: 70px;
     display: grid;
     place-items: center;
   }
 
-  .skills .special-icon  img {
+  .skills .special-icon img {
     width: 60px;
     height: 60px;
     display: grid;
     place-items: center;
   }
 
-  .skills .windows-icon  img {
+  .skills .windows-icon img {
     width: 55px;
     height: 55px;
     display: grid;
@@ -823,11 +819,10 @@ header nav ul li a.active {
 
   .skills .card-icon img {
     width: 75%;
-
   }
 
   /* --------------------- Skill List ----------------------*/
- 
+
   .tooltip {
     position: absolute;
     top: -40px;
@@ -873,7 +868,7 @@ header nav ul li a.active {
     top: 5px;
     left: 5px;
     bottom: 5px;
-    width: 93px;
+    width: 96px;
     background: hsl(24, 74%, 58%);
     border-radius: 100px;
     transition: 0.25s ease-in-out;
@@ -881,14 +876,14 @@ header nav ul li a.active {
   }
 
   .skills-toggle.active::before {
-    left: 91px;
+    left: 108px;
     width: 94px;
   }
 
   .toggle-btn {
     color: #ffffff;
     font-family: var(--ff-poppins);
-    padding: 5px 25px;
+    padding: 5px 28.5px;
     transition: 0.25s ease-in-out;
   }
 
@@ -1008,6 +1003,83 @@ header nav ul li a.active {
       max-width: 460px;
     }
   }
+}
+
+/* -------------------------------------------------------*/
+
+.banner2 {
+  padding-top: 100px;
+}
+
+.projects-container {
+  background-color: #1c1c1c;
+  width: 100%;
+  height: 220px;
+  position: absolute;
+  margin-left: -17.4%;
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+
+.background-project-text {
+  font-size: 40px;
+  margin-left: -10px;
+  width: 100%;
+  font-weight: 800;
+  line-height: 1.5;
+  letter-spacing: 0.3rem;
+  color: transparent;
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: #f6f6f6;
+  opacity: 0.1;
+  position: absolute;
+  top: 20px;
+  left: 0;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.foreground-project-text {
+  font-size: 120px;
+  font-weight: 800;
+  line-height: 1.5;
+  letter-spacing: 0.6rem;
+  color: transparent;
+  -webkit-text-stroke-width: 3px;
+  -webkit-text-stroke-color: #fff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+@media (max-width: 600px) {
+  .foreground-project-text {
+    font-size: 45px;
+    -webkit-text-stroke-width: 1px;
   }
 
-  /* -------------------------------------------------------*/ 
+  .projects-container {
+    margin: 0;
+    margin-left: -2%;
+  }
+}
+
+@media (min-width: 1400px) {
+  .projects-container {
+    margin: 0;
+    margin-left: -200%;
+  }
+}
+
+@media (min-width: 950px) {
+  .foreground-project-text {
+    font-size: 100px;
+  }
+}
+
+@media (max-width: 500px) {
+  .banner1 {
+    padding-top: 300px;
+  }
+}
