--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 * {
   padding: 0;
-  margin: 0;
+  margin: 0; 
   text-decoration: none;
   list-style: none;
   box-sizing: border-box;
@@ -105,6 +105,12 @@ header nav ul li a.active {
   overflow: hidden;
 }
 
+@media (max-width: 4500px) {
+  .nav_logo {
+    display: none;
+  }
+}
+
 @media (max-width: 1500px) {
   .hamburger {
     display: block;
@@ -143,6 +149,7 @@ header nav ul li a.active {
     font-size: 35px;
     position: absolute;
     margin-top: -65px;
+    display: flex;
   }
 }
 
@@ -589,11 +596,12 @@ header nav ul li a.active {
   .about_Text {
     font-size: 12vw;
     letter-spacing: 4px;
-    left: 56%;
-    transform: translateX(-50%);
+    padding-left: 0px;
+    margin: 0;
     margin-top: -90%;
     padding-top: 300px;
-    padding-left: 170px;
+    max-width: 400px;
+    left: 220px; /* Add this line */
   }
 }
 
@@ -602,7 +610,7 @@ header nav ul li a.active {
 .about_Me {
   position: relative;
   top: 0px;
-  left: 1120px;
+  left: 1060px;
   width: 700px;
   height: 300px;
   text-align: left;
