--- a/styles.css
+++ b/styles.css
@@ -528,14 +528,17 @@
    }
 
    @media (max-width: 500px) {
+    
     .CircleDesign {
-      position: absolute;
-      top: 720px;
-      left: 10px;
-      padding-left: 2px;
+      position: absolute; /* This ensures that the ellipses are positioned relative to this container */
+      overflow: hidden; /* This hides any overflow */
+      width: 100%;
+      height: 100vh; /* Adjust the height as needed */
+      top: 710px;
       z-index: 1;
-     }
-
+    
+    }
+      
     .Ellipse1 {
       width: 134px; 
       height: 134px; 
@@ -585,7 +588,8 @@
       height: 160px; 
       left: 320px; 
       top: 116px; 
-      position: absolute; 
+      width: 1;
+      position: relative; 
       background: #2C2B2B; 
       box-shadow: 0px 4px 4px 5px rgba(0, 0, 0, 0.25); 
       border-radius: 9999px
@@ -601,6 +605,7 @@
       left: 280px; 
       z-index: -2;
       top: 50px; 
+      
       position: absolute; 
       background: white; 
       box-shadow: 0px 4px 4px 5px rgba(0, 0, 0, 0.25); 
@@ -848,15 +853,20 @@
     width: calc((80px * 8) + (15px * 4));
   }
 
+  .tools-list {
+    font-size: 15px;
+    width: 400px;
+  }
+
   @media (max-width: 1400px) {
 
     .About_content {
       padding-bottom: 100px;
-      padding-left: 80px;
+      padding-left: 60px;
       display: flex;
       justify-content: space-between;
       flex-wrap: wrap;
-    }
+    } 
 
     .image { 
       width: 460px;
@@ -874,6 +884,7 @@
 
     .header {
       flex-basis: 61%;
+      padding-left: 20px;
     }
     
     .header h1 {
@@ -889,18 +900,23 @@
       line-height: 34px;
       color: #1c1c1c;
     }
+
+    .tools-list {
+      font-size: 13px;
+      width: 400px;
+    }
   }
 
   @media (max-width: 500px) {
 
     .About_Me {
       padding-top: 1150px;
-      padding-bottom: 100px;
+      padding-bottom: 40px;
     }
     
     .About_content {
       padding-bottom: 100px;
-      padding-left: 30px;
+      padding-left: 10px;
       display: flex;
       justify-content: space-between;
       flex-wrap: wrap;
@@ -908,6 +924,10 @@
 
     .image { 
       display: none;
+    }
+
+    .header {
+      flex-basis: 65%;
     }
     
     .header h1 {
@@ -922,6 +942,7 @@
       padding-top: 20px;
       line-height: 34px;
       width: 380px;
+      font-weight: 700;
       color: #1c1c1c;
     }
 
@@ -934,6 +955,7 @@
       animation: fadeIn 0.5s ease-out forwards;
     }
 
-    
+    .tools-list {
+      font-size: 12px;
+    }
   }
-
