--- a/styles.css
+++ b/styles.css
@@ -502,6 +502,188 @@ header nav ul li a.active {
   border-radius: 9999px;
 }
 
+@media (max-width: 1400px) {
+    .CircleDesign1 {
+      position: absolute;
+      overflow: hidden;
+      width: 100%;
+      height: 100vh;
+      top: 710px;
+      z-index: 1;
+    }
+  
+    .Ellipse1 {
+      width: 134px;
+      height: 134px;
+      left: -60px;
+      top: 157px;
+      position: absolute;
+      background: #ff5f1f;
+      box-shadow: 0px 4px 30px 6px rgba(0, 0, 0, 0.25);
+      border-radius: 9999px;
+    }
+  
+    .Ellipse2 {
+      width: 158px;
+      height: 158px;
+      left: 0px;
+      top: 100px;
+      position: absolute;
+      background: #2c2b2b;
+      box-shadow: 0px 4px 4px 5px rgba(0, 0, 0, 0.25);
+      border-radius: 9999px;
+    }
+  
+    .Ellipse3 {
+      width: 250px;
+      height: 250px;
+      left: 119px;
+      top: 80px;
+      position: absolute;
+      background: #ff5f1f;
+      box-shadow: 0px 4px 4px 5px rgba(0, 0, 0, 0.25);
+      border-radius: 9999px;
+    }
+  
+    .Ellipse4 {
+      width: 122px;
+      height: 122px;
+      left: 90px;
+      top: 65px;
+      z-index: -1;
+      position: absolute;
+      background: white;
+      box-shadow: 0px 4px 5px 5px rgba(0, 0, 0, 0.25);
+      border-radius: 9999px;
+    }
+  
+    .Ellipse5 {
+      width: 160px;
+      height: 160px;
+      left: 300px;
+      top: 25px;
+      width: 1;
+      position: relative;
+      background: #2c2b2b;
+      box-shadow: 0px 4px 4px 5px rgba(0, 0, 0, 0.25);
+      border-radius: 9999px;
+    }
+  
+    .Ellipse6 {
+        width: 374px;
+        height: 374px;
+        left: 300px;
+        top: 20px;
+        z-index: -1;
+        position: absolute;
+        background: #2c2b2b;
+        box-shadow: 0px 4px 4px 5px rgba(0, 0, 0, 0.25);
+        border-radius: 9999px;
+      }
+      
+      .Ellipse7 {
+        width: 170px;
+        height: 170px;
+        left: 600px;
+        top: 50px;
+        position: absolute;
+        background: white;
+        box-shadow: 0px 4px 4px 5px rgba(0, 0, 0, 0.25);
+        border-radius: 9999px;
+      }
+      
+      .Ellipse8 {
+        width: 223px;
+        height: 223px;
+        left: 620px;
+        top: 157px;
+        position: absolute;
+        background: #ff5f1f;
+        box-shadow: 0px 4px 4px 5px rgba(0, 0, 0, 0.25);
+        border-radius: 9999px;
+      }
+      
+      .Ellipse9 {
+        width: 183px;
+        height: 183px;
+        left: 740px;
+        top: 70px;
+        position: absolute;
+        background: #2c2b2b;
+        box-shadow: 0px 4px 4px 5px rgba(0, 0, 0, 0.25);
+        border-radius: 9999px;
+      }
+      
+      .Ellipse10 {
+        width: 220px;
+        height: 220px;
+        left: 890px;
+        top: 30px;
+        position: absolute;
+        background: #ff5f1f;
+        box-shadow: 0px 4px 4px 5px rgba(0, 0, 0, 0.25);
+        border-radius: 9999px;
+      }
+      
+      .Ellipse11 {
+        width: 274px;
+        height: 274px;
+        left: 800px;
+        top: 100px;
+        z-index: -1;
+        position: absolute;
+        background: #2c2b2b;
+        box-shadow: 0px 4px 4px 5px rgba(0, 0, 0, 0.25);
+        border-radius: 9999px;
+      }
+      
+      .Ellipse12 {
+        width: 160px;
+        height: 160px;
+        left: 1000px;
+        top: 190px;
+        position: absolute;
+        background: white;
+        box-shadow: 0px 4px 4px 5px rgba(0, 0, 0, 0.25);
+        border-radius: 9999px;
+      }
+      
+      .Ellipse13 {
+        width: 321px;
+        height: 321px;
+        left: 1100px;
+        top: -100px;
+        z-index: -1;
+        position: relative;
+        background: #ff5f1f;
+        box-shadow: 0px 4px 4px 5px rgba(0, 0, 0, 0.25);
+        border-radius: 9999px;
+      }
+  
+      .Ellipse14 {
+        width: 231px;
+        height: 240px;
+        left: 1030px;
+        top: 20px;
+        z-index: -1;
+        position: absolute;
+        background: #2c2b2b;
+        box-shadow: 0px 4px 4px 5px rgba(0, 0, 0, 0.25);
+        border-radius: 9999px;
+      }
+    .Ellipse15 {
+      display: none;
+    }
+  
+    .Ellipse16 {
+      display: none;
+    }
+  
+    .Ellipse17 {
+      display: none;
+    }
+  }
+
 @media (max-width: 500px) {
   .CircleDesign1 {
     position: absolute;
@@ -579,7 +761,6 @@ header nav ul li a.active {
     left: 280px;
     z-index: -2;
     top: 50px;
-
     position: absolute;
     background: white;
     box-shadow: 0px 4px 4px 5px rgba(0, 0, 0, 0.25);
