--- a/styles.css
+++ b/styles.css
@@ -1316,11 +1316,9 @@ main.row {
 
 @media (max-width: 1100px) {
   .container {
-    width: 1000px;
+    max-width: 1100px;
     width: 100%;
-    padding-left: 30px;
-    padding-right: 0px;
-    padding-bottom: 300px;
+    padding: 0 20px 300px;
   }
 
   .col header.title h2 {
@@ -1333,7 +1331,7 @@ main.row {
   main.row {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-column-gap: 30px;
+    grid-column-gap: 40px;
   }
 
   .col .contents {
@@ -1384,11 +1382,9 @@ main.row {
 
 @media (max-width: 500px) {
   .container {
-    width: 400px;
+    max-width: 1100px;
     width: 100%;
-    padding-left: 30px;
-    padding-right: 0px;
-    padding-bottom: 300px;
+    padding: 0 20px 300px;
   }
 
   main.row {
