--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,7 @@ header {
 
 header.sticky {
   padding: 0 30px;
+  position: fixed;
   background-color: transparent;
 }
 
@@ -1317,8 +1318,8 @@ main.row {
 @media (max-width: 1100px) {
   .container {
     max-width: 1100px;
-    width: 90%;
-    padding: 0 20px 300px;
+    width: 100%;
+    padding: 0 30px 300px;
   }
 
   .col header.title h2 {
@@ -1330,6 +1331,8 @@ main.row {
 
   main.row {
     display: grid;
+    max-width: 1100px;
+    width: 100%;
     grid-template-columns: 1fr 1fr;
     grid-column-gap: 40px;
   }
@@ -1389,6 +1392,8 @@ main.row {
 
   main.row {
     grid-template-columns: 1fr;
+    max-width: 450px;
+    width: 100%;
   }
 
   .row .col:nth-child(2) {
