--- a/styles.css
+++ b/styles.css
@@ -1315,7 +1315,7 @@ main.row {
   }
 }
 
-@media (max-width: 1400px) {
+@media (max-width: 1100px) {
     .container {
       width: 1100px;
       width: 100%;
@@ -1326,7 +1326,7 @@ main.row {
   
     .col header.title h2 {
       -webkit-text-stroke: 2px #1c1c1c;
-      font-size: 50px;
+      font-size: 40px;
       color: transparent;
       padding: 0px 0px 20px 20px;
     }
@@ -1334,7 +1334,7 @@ main.row {
     main.row {
       display: grid;
       grid-template-columns: 1fr 1fr;
-      grid-column-gap: 30px;
+      grid-column-gap: 35px;
     }
   
     .col .contents {
@@ -1383,71 +1383,70 @@ main.row {
     }
   }
 
-  @media (max-width: 500px) {
-    .container {
-      width: 500px;
-      width: 100%;
-      padding-left: 15px;
-      padding-right: 0px;
-      padding-bottom: 300px;
-    }
-  
-    .col header.title h2 {
-      -webkit-text-stroke: 2px #1c1c1c;
-      font-size: 50px;
-      color: transparent;
-      padding: 0px 0px 20px 20px;
-    }
-  
-    main.row {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      grid-column-gap: 20px;
-    }
-  
-    .col .contents {
-      padding: 0px 30px;
-      border-left: 3px solid #1c1c1c;
-    }
-    .col .contents .box {
-      position: relative;
-      padding: 20px;
-      border-radius: 20px;
-      border: 4px solid #1c1c1c;
-      cursor: pointer;
-      transition: all 0.4s;
-      margin-bottom: 30px;
-    }
-    .col .contents .box:hover {
-      box-shadow: 0px 3px 12px 0px #ff5f1f;
-    }
-    .col .contents .box::before {
-      content: "";
-      position: absolute;
-      width: 16px;
-      height: 16px;
-      border-radius: 50%;
-      right: calc(100% + 27px);
-      top: -8px;
-      background-color: #1c1c1c;
-    }
-  
-    .box h4 {
-      position: relative;
-      font-size: 18px;
-      color: #ff5f1f;
-    }
-    .box h3 {
-      position: relative;
-      padding-top: 10px;
-      font-size: 16px;
-      color: #1c1c1c;
-    }
-    .box p {
-      padding-top: 15px;
-      line-height: 25px;
-      color: #1c1c1c;
-      font-size: 16px;
-    }
+@media (max-width: 500px) {
+  .container {
+    max-width: 500px;
+    width: 100%;
+    padding: 0 15px 300px;
   }
 
+  main.row {
+    grid-template-columns: 1fr;
+  }
+
+  .row .col:nth-child(2) {
+    margin-top: 30px;
+  }
+
+  .col header.title h2 {
+    -webkit-text-stroke: 2px #1c1c1c;
+    font-size: 38px;
+    color: transparent;
+    padding: 0px 0px 20px 20px;
+  }
+
+  .col .contents {
+    padding: 0px 30px;
+    border-left: 3px solid #1c1c1c;
+  }
+  .col .contents .box {
+    position: relative;
+    padding: 20px;
+    border-radius: 20px;
+    border: 4px solid #1c1c1c;
+    cursor: pointer;
+    transition: all 0.4s;
+    margin-bottom: 30px;
+  }
+  .col .contents .box:hover {
+    box-shadow: 0px 3px 12px 0px #ff5f1f;
+  }
+  .col .contents .box::before {
+    content: "";
+    position: absolute;
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    right: calc(100% + 27px);
+    top: -8px;
+    background-color: #1c1c1c;
+  }
+
+  .box h4 {
+    position: relative;
+    font-size: 18px;
+    color: #ff5f1f;
+  }
+  .box h3 {
+    position: relative;
+    padding-top: 10px;
+    font-size: 16px;
+    color: #1c1c1c;
+  }
+  .box p {
+    padding-top: 15px;
+    line-height: 25px;
+    color: #1c1c1c;
+    font-size: 16px;
+  }
+}
