--- a/styles.css
+++ b/styles.css
@@ -1965,187 +1965,150 @@ main.row {
 
 
 footer {
-  background-color: #1c1c1c;
-}
-
-.footerContainer {
-  width: 100%;
-  padding: 250px 30px 20px;
-}
-
-.socialIcons {
-  display: flex;
-  justify-content: center;
-}
-
-.socialIcons li a {
-  color: #ffffff;
-  margin: 10px;
-  font-size: 40px;
-  opacity: 0.5;
-  transition: 0.3s;
-}
-
-.socialIcons li a:hover {
-  opacity: 1;
-}
-
-.footerNav {
-  margin: 30px 0;
-}
-
-.footerNav ul {
-  display: flex;
-  justify-content: center;
-}
-
-.footerNav ul li a {
-  color: #ffffff;
-  margin: 20px;
-  font-size: 20px;
-  opacity: 0.5;
-  transition: 0.3s;
-}
-
-.footerNav ul li a:hover {
-  opacity: 1;
-}
-
-.footerBottom {
-  background-color: rgba(0, 0, 0, 0.2);
-  padding: 20px;
-  text-align: center;
-  width: 100%;
-}
-
-.footerBottom p {
-  color: #ffffff;
-}
-
-.footerBottom a {
-  color: #ffffff;
-  opacity: 0.5;
-  transition: 0.3s;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  font-weight: 500;
-  margin: 0px 5px;
-}
-
-.footerBottom a:hover {
-  opacity: 1;
-}
-
-@media (max-width: 1400px) {
-    
-    .socialIcons {
-        display: flex;
-        padding-left: 20px;
-        justify-content: center;
-      }
-    
-      .socialIcons li a {
-        color: #ffffff;
-        margin: 10px;
-        font-size: 40px;
-        opacity: 1;
-        transition: 0.3s;
-      }
-    
-      .footerNav {
-        margin: 30px 0;
-      }
-    
-      .footerNav ul {
-        display: flex;
-        justify-content: center;
-      }
-    
-      .footerNav ul li a {
-        color: #ffffff;
-        margin: 30px;
-        font-size: 20px;
-        opacity: 1;
-        transition: 0.3s;
-      }
-    
-      .footerNav ul li a:hover {
-        opacity: 1;
-      }
-    
-      .footerBottom p {
-        color: #ffffff;
-        font-size: 16px;
-      }
-    
-      .footerBottom a {
-        color: #ffffff;
-        opacity: 1;
-        transition: 0.3s;
-        text-transform: uppercase;
-        letter-spacing: 1px;
-        font-weight: 400;
-        margin: 0px 5px;
-      }
-
-      .footerContainer, .footerBottom {
-        margin-bottom: -5px;
-      }
-}
-
-@media (max-width: 500px) {
-
+    background-color: #1c1c1c;
+  }
+  
+  .footerContainer {
+    width: 100%;
+    padding: 250px 30px 20px;
+  }
+  
   .socialIcons {
     display: flex;
-    padding-left: 20px;
     justify-content: center;
   }
-
+  
   .socialIcons li a {
     color: #ffffff;
     margin: 10px;
     font-size: 40px;
-    opacity: 1;
+    opacity: 0.5;
     transition: 0.3s;
   }
-
+  
+  .socialIcons li a:hover {
+    opacity: 1;
+  }
+  
   .footerNav {
     margin: 30px 0;
   }
-
+  
   .footerNav ul {
     display: flex;
     justify-content: center;
   }
-
+  
   .footerNav ul li a {
     color: #ffffff;
-    margin: 0px;
+    margin: 20px;
     font-size: 20px;
-    opacity: 1;
+    opacity: 0.5;
     transition: 0.3s;
   }
-
+  
   .footerNav ul li a:hover {
     opacity: 1;
   }
-
+  
+  .footerBottom {
+    background-color: rgba(0, 0, 0, 0.2);
+    padding: 20px;
+    text-align: center;
+    width: 100%;
+  }
+  
   .footerBottom p {
     color: #ffffff;
-    font-size: 16px;
   }
-
+  
   .footerBottom a {
     color: #ffffff;
-    opacity: 1;
+    opacity: 0.5;
     transition: 0.3s;
     text-transform: uppercase;
     letter-spacing: 1px;
-    font-weight: 400;
+    font-weight: 500;
     margin: 0px 5px;
   }
   
-  .footerContainer, .footerBottom {
-    margin-bottom: -5px;
+  .footerBottom a:hover {
+    opacity: 1;
   }
-}
+  
+  @media (max-width: 1000px) {
+    .footerNav ul {
+      flex-direction: column;
+    }
+  
+    .footerNav ul li {
+      width: 100%;
+      text-align: center;
+      margin: 10px;
+    }
+  
+    .footerNav ul li a {
+      opacity: 1;
+    }
+  
+    .footerBottom a {
+      opacity: 1;
+    }
+  }
+  
+  @media (max-width: 500px) {
+    footer {
+      background-color: #1c1c1c;
+      margin-top: -30px;
+  
+    }
+    .socialIcons {
+      display: flex;
+      padding-left: 20px;
+      justify-content: center;
+    }
+  
+    .socialIcons li a {
+      color: #ffffff;
+      margin: 10px;
+      font-size: 40px;
+      opacity: 1;
+      transition: 0.3s;
+    }
+  
+    .footerNav {
+      margin: 30px 0;
+    }
+  
+    .footerNav ul {
+      display: flex;
+      justify-content: center;
+    }
+  
+    .footerNav ul li a {
+      color: #ffffff;
+      margin: 0px;
+      font-size: 20px;
+      opacity: 1;
+      transition: 0.3s;
+    }
+  
+    .footerNav ul li a:hover {
+      opacity: 1;
+    }
+  
+    .footerBottom p {
+      color: #ffffff;
+      font-size: 16px;
+    }
+    
+    .footerBottom a {
+      color: #ffffff;
+      opacity: 1;
+      transition: 0.3s;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      font-weight: 400;
+      margin: 0px 5px;
+    }
+  }
